name:                todomvc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/may-front#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable todomvc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    ElementBuilder
    TodoView
    WebAPI
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Widentities -Wredundant-constraints -Wmissing-export-lists -Wpartial-fields -threaded -optl--prog-name=todomvc
  build-depends:         base >= 4.7 && < 5
                       , bytestring
                       , binary
                       , asterius-prelude

test-suite mayfronttest
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Widentities -Wredundant-constraints -Wmissing-export-lists -Wpartial-fields -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , binary
    , bytestring
    , hspec
    , may-front
  default-language: Haskell2010
